# TheSeptaTimes.rs

./: Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  patch-homebrew.yml  release.yml
src/: api.rs  data.rs  main.rs  parse.rs  print.rs  stations.rs  traits.rs  utils.rs
src/endpoints/: arrivals.rs  manager_plus_plus.rs  mod.rs  schedule_plus_plus.rs
src/septa/: arrivals.rs  next_to_arrive.rs  train_schedule.rs
src/septum/: misc.rs  mod.rs  schedule.rs
