[package]
name = "the-septa-times"
version = "0.9.2"
edition = "2021"
description = "A CLI application for the SEPTA API"
homepage = "https://github.com/dotzenith/TheSeptaTimes.rs"
repository = "https://github.com/dotzenith/TheSeptaTimes.rs"
license = "MIT"
autobins = false

[[bin]]
name = "tst"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
bincode = "1.3.3"
anyhow = "1.0.75"
platform-dirs = "0.3.0"
fuzzy-matcher = "0.3.7"
clap = { version = "4.4.9", features = ["cargo"] }
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
