[package]
name = "the-septa-times"
version = "0.10.2"
edition = "2024"
description = "A SEPTA app for the terminal"
homepage = "https://github.com/dotzenith/TheSeptaTimes.rs"
repository = "https://github.com/dotzenith/TheSeptaTimes.rs"
license = "MIT"
autobins = false

[[bin]]
name = "tst"
path = "src/main.rs"

[dependencies]
colored = "2"
bincode = "1.3.3"
anyhow = "1.0.75"
clap = { version = "4.4.9", features = ["cargo", "derive"] }
serde = { version = "1.0.192", features = ["derive"] }
ureq = { version = "3.0.1", features = ["json"] }
url = "2.5.4"
nucleo-matcher = "0.3.1"
directories = "6.0.0"

[profile.release]
lto = true
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
